package com.practica3;

public enum Genero{
    ACCION,
    BELICA,
    WESTERN,
    THRILLER,
    TERROR,
    SUSPENSE,
    POLICIAL,
    MUSICAL,
    COMEDIA,
    CIENCIAFICCION,
    DOCUMENTAL;
}
